# learn-rust

./: .gitignore  Cargo.toml  README.md
migrations/2024-02-26-163711_create_fund_model/: up.sql
migrations/2024-02-26-163726_create_fund_history_model/: up.sql
src/: cron.rs  fizbuzz.rs  main.rs  schema.rs
test-0/: Cargo.toml  LICENSE  README.md
test-1/: Cargo.toml  LICENSE
test-1/.github/workflows/: cd.yml
test-2/: Cargo.toml
test-2/migrations/2024-02-26-163711_create_fund_model/: down.sql
test-2/migrations/2024-02-26-163726_create_fund_history_model/: down.sql
test-2/src/: csv.rs
test1/: README.md
