[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
hyper = "1.2.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

